; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/wlp/extr_messages.c_wlp_create_wssid_e.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/uwb/wlp/extr_messages.c_wlp_create_wssid_e.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wlp_wssid_e = type { i32, i32* }
%struct.wlp = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.device }
%struct.device = type { i32 }
%struct.wlp_neighbor_e = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i8] c"WLP: unable to allocate memory for WSS information.\0A\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"WLP: unable to allocate memory for temporary WSS information.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.wlp_wssid_e* (%struct.wlp*, %struct.wlp_neighbor_e*)* @wlp_create_wssid_e to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.wlp_wssid_e* @wlp_create_wssid_e(%struct.wlp* %0, %struct.wlp_neighbor_e* %1) #0 {
  %3 = alloca %struct.wlp*, align 8
  %4 = alloca %struct.wlp_neighbor_e*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.wlp_wssid_e*, align 8
  store %struct.wlp* %0, %struct.wlp** %3, align 8
  store %struct.wlp_neighbor_e* %1, %struct.wlp_neighbor_e** %4, align 8
  %7 = load %struct.wlp*, %struct.wlp** %3, align 8
  %8 = getelementptr inbounds %struct.wlp, %struct.wlp* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store %struct.device* %11, %struct.device** %5, align 8
  %12 = load i32, i32* @GFP_KERNEL, align 4
  %13 = call i8* @kzalloc(i32 16, i32 %12)
  %14 = bitcast i8* %13 to %struct.wlp_wssid_e*
  store %struct.wlp_wssid_e* %14, %struct.wlp_wssid_e** %6, align 8
  %15 = load %struct.wlp_wssid_e*, %struct.wlp_wssid_e** %6, align 8
  %16 = icmp eq %struct.wlp_wssid_e* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load %struct.device*, %struct.device** %5, align 8
  %19 = call i32 @dev_err(%struct.device* %18, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0))
  br label %41

20:                                               ; preds = %2
  %21 = load i32, i32* @GFP_KERNEL, align 4
  %22 = call i8* @kzalloc(i32 4, i32 %21)
  %23 = bitcast i8* %22 to i32*
  %24 = load %struct.wlp_wssid_e*, %struct.wlp_wssid_e** %6, align 8
  %25 = getelementptr inbounds %struct.wlp_wssid_e, %struct.wlp_wssid_e* %24, i32 0, i32 1
  store i32* %23, i32** %25, align 8
  %26 = load %struct.wlp_wssid_e*, %struct.wlp_wssid_e** %6, align 8
  %27 = getelementptr inbounds %struct.wlp_wssid_e, %struct.wlp_wssid_e* %26, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %35

30:                                               ; preds = %20
  %31 = load %struct.device*, %struct.device** %5, align 8
  %32 = call i32 @dev_err(%struct.device* %31, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  %33 = load %struct.wlp_wssid_e*, %struct.wlp_wssid_e** %6, align 8
  %34 = call i32 @kfree(%struct.wlp_wssid_e* %33)
  store %struct.wlp_wssid_e* null, %struct.wlp_wssid_e** %6, align 8
  br label %41

35:                                               ; preds = %20
  %36 = load %struct.wlp_wssid_e*, %struct.wlp_wssid_e** %6, align 8
  %37 = getelementptr inbounds %struct.wlp_wssid_e, %struct.wlp_wssid_e* %36, i32 0, i32 0
  %38 = load %struct.wlp_neighbor_e*, %struct.wlp_neighbor_e** %4, align 8
  %39 = getelementptr inbounds %struct.wlp_neighbor_e, %struct.wlp_neighbor_e* %38, i32 0, i32 0
  %40 = call i32 @list_add(i32* %37, i32* %39)
  br label %41

41:                                               ; preds = %35, %30, %17
  %42 = load %struct.wlp_wssid_e*, %struct.wlp_wssid_e** %6, align 8
  ret %struct.wlp_wssid_e* %42
}

declare dso_local i8* @kzalloc(i32, i32) #1

declare dso_local i32 @dev_err(%struct.device*, i8*) #1

declare dso_local i32 @kfree(%struct.wlp_wssid_e*) #1

declare dso_local i32 @list_add(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
